manifests/apps/home/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home
spec:
  selector:
    app: home-assistant
  ports:
  - name: http
    port: 8123
    targetPort: 8123
    protocol: TCP
  type: ClusterIP
